# fc28

./: README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg
backend/: app.py
backend/core/: config.py  config_helpers.py  controller.py  db.py  heating_valve.py  installer_schemas.py  models.py  mqtt_client.py  notifications.py  panel_utils.py  rs485.py  rs485_drivers.py  scheduler.py  schemas.py  security.py  test_harness.py  test_mode.py  update_manager.py  utils.py  vents.py
backend/routers/: api.py  installer.py  ws.py
boneio/: boneio1.yaml  secrets.yaml
config/: .env.example  mosquitto.conf  settings.yaml
deploy/: farmcare-tunnel.service  farmcare.service  kiosk.service  nginx-mikrus.conf
frontend/: farmcare.js  index.html  installer.html  installer.js  styles.css
scripts/: configure_network.sh  init_db.py  update_from_zip.sh
tests/: test_config_helpers.py  test_environment_logic.py  test_loop_delays.py  test_no_readings.py  test_notifications.py  test_rs485_merge.py  test_rs485_no_response.py  test_rs485_zero_values.py  test_sensor_averager.py  test_update_manager.py
